WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
207231
Fix Mac CMake build
https://bugs.webkit.org/show_bug.cgi?id=207231
Summary
Fix Mac CMake build
Alex Christensen
Reported
2020-02-04 14:57:48 PST
Fix some bit rot.
Attachments
patch
(15.66 KB, patch)
2020-02-04 15:00 PST
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2020-02-04 15:00:16 PST
Created
attachment 389715
[details]
patch
Alex Christensen
Comment 2
2020-02-04 15:36:37 PST
http://trac.webkit.org/r255709
Radar WebKit Bug Importer
Comment 3
2020-02-04 15:37:19 PST
<
rdar://problem/59168617
>
Ryan Haddad
Comment 4
2020-02-04 17:39:41 PST
Internal build fix in
https://trac.webkit.org/changeset/255779/webkit
Darin Adler
Comment 5
2020-02-04 18:19:48 PST
Comment on
attachment 389715
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=389715&action=review
> Tools/MiniBrowser/mac/WK2BrowserWindowController.m:133 > +#if __has_feature(objc_arc) > __weak WKWebView *weakWebView = _webView; > +#else > + WKWebView *weakWebView = _webView; > +#endif
I don’t understand this at all. This file is not ARC-compatible; it has a [super dealloc] call and calls to the release method. What’s the story here?
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug