Fix Mac CMake build https://bugs.webkit.org/show_bug.cgi?id=207231

Source/JavaScriptCore:

* PlatformMac.cmake:

Source/WebCore:

* PlatformMac.cmake:
* platform/ios/WebItemProviderPasteboard.h:

Source/WebCore/PAL:

* pal/PlatformMac.cmake:

Source/WebKit:

* PlatformMac.cmake:
* WebProcess/WebPage/mac/WebPageMac.mm:
(WebKit::WebPage::updateVisibleContentRects):

Tools:

* DumpRenderTree/PlatformMac.cmake:
* MiniBrowser/mac/CMakeLists.txt:
* MiniBrowser/mac/WK2BrowserWindowController.m:
(-[WK2BrowserWindowController awakeFromNib]):
* WebKitTestRunner/PlatformMac.cmake:



Canonical link: https://commits.webkit.org/220222@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255709 268f45cc-cd09-0410-ab3c-d52691b4dbfc